--- a/index.ipynb
+++ b/index.ipynb
@@ -77,11 +77,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 4 6]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here\n",
+    "import numpy as np\n",
+    "v = np.array([2, 4, 6])\n",
+    "print(v)"
    ]
   },
   {
@@ -100,11 +111,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3.14159265 -2.44346095 -1.74532925 -1.04719755 -0.34906585  0.34906585\n",
+      "  1.04719755  1.74532925  2.44346095  3.14159265]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here"
+    "# Code here\n",
+    "x = np.linspace(-np.pi, np.pi, 10)\n",
+    "print(x)"
    ]
   },
   {
@@ -122,11 +144,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.141592653589793\n",
+      "-1.7453292519943295\n",
+      "3.141592653589793\n",
+      "2.443460952792061\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here\n",
+    "print (x[0])  # first element\n",
+    "print (x[2])  # third element\n",
+    "print (x[-1]) # last element\n",
+    "print (x[-2]) # second to last element"
    ]
   },
   {
@@ -144,11 +181,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 3 4]\n",
+      "[1 3 5 7 9]\n",
+      "[ 1  2  3  4  5  6  7  8  9 10]\n",
+      "[10  9  8  7  6  5  4  3  2  1]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here\n",
+    "x = np.asarray(list(range(1,11)))\n",
+    "print (x[1:4])     # second to fourth element. Element 5 is not included\n",
+    "print (x[0:-1:2])  # every other element\n",
+    "print (x[:])       # print the whole vector\n",
+    "print (x[::-1])"
    ]
   },
   {
@@ -186,11 +239,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here\n",
+    "X = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "print(X)"
    ]
   },
   {
@@ -210,11 +275,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here\n",
+    "Y = np.mat([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "print (Y)"
    ]
   },
   {
@@ -380,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
